--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>
 
 <body>
-    <!-- Header/Title with reserveForm btn -->
+    <!-- Header/Title with 0rder now btn -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
