--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
         
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
         
     <title>The Neighborhood: Acai and Juice Bar</title>
     </head>
