--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </head>
 
 <body>
-    <!-- Header/Title with 0rder now btn -->
+    <!-- Header/Title with order now btn -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <img src="" alt="img-fluid" />
+                <div id="header-img" class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <img src="./Acai & Juice Bar/images/Strawberries - water.jpg" alt="img-fluid" />
                 </div>
                 <div class="col">
                     <h1>The Neighborhood</h1>
