--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <div class="container">
             <div class="row row-content align-items-center">
                 <div id="header-img" class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <img src="./Acai & Juice Bar/images/Strawberries - water.jpg" alt="img-fluid" />
+                    <img src="./Acai & Juice Bar/images/Blueberries-Violet BG.jpg" alt="img-fluid" />
+                    <img src="./Acai & Juice Bar/images/logo.jpg" alt="img-fluid" />
+                    <img src="./Acai & Juice Bar/images/Blueberries-Violet BG.jpg" alt="img-fluid" />
+                </div>
+                
                 </div>
                 <div class="col">
                     <h1>The Neighborhood</h1>
