--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="menu.html">
                             <i class="fa fa-info fa-lg"></i> 
                             Menu
                         </a>
