--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="row row-content align-items-center">
                 <div id="header-img" class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <img src="./Acai & Juice Bar/images/logo.jpg" alt="img-fluid" />
+                    <img class="logo" src="./Acai & Juice Bar/images/logo.jpg" alt="img-fluid" />
                 </div>
                 
                 </div>
