--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
-                <div id="header-img" class="col-4 col-sm-3 col-md-2 align-self-center">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <img class="logo" src="./Acai & Juice Bar/images/logo.jpg" alt="img-fluid" />
                 </div>
                 
@@ -40,7 +40,9 @@
                     <h2>Acai and Juice Bar</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-info btn-outline-success text-white btn-lg text-nowrap"  href="#" role="button">Order Now</a>
+                    <a class="btn btn-info btn-outline-success text-white btn-lg text-nowrap" data-toggle="modal" role="button" data-target="#orderModal" >
+                        Order Now
+                    </a>
                 </div>
             </div>
         </div>
