--- a/index.html
+++ b/index.html
@@ -49,18 +49,15 @@
     </header>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-sm navbar-light sticky-top">
         <div class="container">
-            <a href="#" class="navbar-brand">
-                <img src="" height="30" width="30" />
-            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#" id="Home">
                             <i class="fa fa-home fa-lg"></i> 
                             Home
                         </a>
@@ -78,9 +75,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="./contactus.html">
                             <i class="fa fa-address-card fa-lg"></i> 
                             Contact Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-brand">
+                            <img src="./Acai & Juice Bar/images/strawberry.jpg" height="40" width="40" />
                         </a>
                     </li>
                 </ul>
