--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="">
+            <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#" id="Home">
