--- a/menu.html
+++ b/menu.html
@@ -39,74 +39,88 @@
         </header>
 
         <main>
-        <div class="acai-cali">
-            <img src="./Acai & Juice Bar/images/cali-creamin-bowl.jpg" />
-            <h2>Cali Creamin Bowl</h2>
-            <p class="bowl-ingredients">These are the ingredients in the bowl</p>
-            <p class="description">
-                This delicious bowl is topped with!
-            </p>
-        </div>
+        <div id="accordion">
+            <div class="acai-cali card">
+                <div class="card-header" id="headingOne">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Acai Bowls
+                        </button>
+                    </h5>
+                </div>
 
-        <div class="acai-spooners">
-            <img src="./Acai & Juice Bar/images/spooners-cove-bowl.jpg "/>
-            <h2>Spooners Cove Bowl</h2>
-            <p class="bowl-ingredients">
-                These are the ingredients in the bowl
-            </p>
-            <p class="description">
-                This delicious bowl is topped with!
-            </p>
-        </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body">
+                        <img src="./Acai & Juice Bar/images/cali-creamin-bowl.jpg" height="210"/>
+                            <h2>Cali Creamin Bowl</h2>
+                            <p class="bowl-ingredients">
+                                These are the ingredients in the bowl
+                            </p>
+                            <p class="description">
+                                This delicious bowl is topped with!
+                            </p>
+                            <div class="acai-spooners ">
+                                <img src="./Acai & Juice Bar/images/spooners-cove-bowl.jpg " height="210"/>
+                                <h2>Spooners Cove Bowl</h2>
+                                <p class="bowl-ingredients">
+                                    These are the ingredients in the bowl
+                                </p>
+                                <p class="description">
+                                    This delicious bowl is topped with!
+                                </p>
+                            </div>
+                            
+                            <div class="acai-pumpkin">
+                                <img src="./Acai & Juice Bar/images/pumpkin-spice-bowl.jpg" height="210"/>
+                                <h2>Pumpkin Spice Bowl</h2>
+                                <p class="bowl-ingredients">
+                                    These are the ingredients in the bowl
+                                </p>
+                                <p class="description">
+                                    This delicious bowl is topped with!
+                                </p>
+                            </div>
 
-        <div class="acai-pumpkin">
-            <img src="./Acai & Juice Bar/images/pumpkin-spice-bowl.jpg" />
-            <h2>Pumpkin Spice Bowl</h2>
-            <p class="bowl-ingredients">
-                These are the ingredients in the bowl
-            </p>
-            <p class="description">
-                This delicious bowl is topped with!
-            </p>
-        </div>
+                            <div class="acai-peppermint">
+                                <img src="./Acai & Juice Bar/images/peppermint-bowl.jpg" height="210" />
+                                <h2>Peppermint Bowl</h2>
+                                <p class="bowl-ingredients">
+                                    These are the ingredients in the bowl
+                                </p>
+                                <p class="description">
+                                    This delicious bowl is topped with!
+                                </p>
+                            </div>
 
-        <div class="acai-peppermint">
-            <img src="./Acai & Juice Bar/images/peppermint-bowl.jpg" />
-            <h2>Peppermint Bowl</h2>
-            <p class="bowl-ingredients">
-                These are the ingredients in the bowl
-            </p>
-            <p class="description">
-                This delicious bowl is topped with!
-            </p>
-        </div>
+                            <div class="acai-peachstreet">
+                                <img src="./Acai & Juice Bar/images/peachstreet-bowl.jpg" height="210" />
+                                <h2>Peach Street Bowl</h2>
+                                <p class="bowl-ingredients">
+                                    These are the ingredients in the bowl
+                                </p>
+                                <p class="description">
+                                    This delicious bowl is topped with!
+                                </p>
+                            </div>
 
-        <div class="acai-peachstreet">
-            <img src="./Acai & Juice Bar/images/peachstreet-bowl.jpg" />
-            <h2>Peach Street Bowl</h2>
-            <p class="bowl-ingredients">
-                These are the ingredients in the bowl
-            </p>
-            <p class="description">
-                This delicious bowl is topped with!
-            </p>
+                            <div class="acai-bootstrap">
+                                <img src="./Acai & Juice Bar/images/acai-bowl.jpg" height="210" />
+                                <h2>Bootstrap Acai Bowl</h2>
+                                <p class="bowl-ingredients">
+                                    These are the ingredients in the bowl
+                                </p>
+                                <p class="description">
+                                    This delicious bowl is topped with!
+                                </p>
+                            </div>
+                    </div>
+                </div> 
+            </div>
         </div>
-
-        <div class="acai-bootstrap">
-            <img src="./Acai & Juice Bar/images/acai-bowl.jpg" />
-            <h2>Bootstrap Acai Bowl</h2>
-            <p class="bowl-ingredients">
-                These are the ingredients in the bowl
-            </p>
-            <p class="description">
-                This delicious bowl is topped with!
-            </p>
-        </div>
-        
         </main>
 
         <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        <img src="./Acai & Juice Bar/images/berries.jpg" class="logo">
         </footer>
     </div>
 </body>
