--- a/menu.html
+++ b/menu.html
@@ -39,8 +39,8 @@
         </header>
 
         <main>
-        <div id="accordion">
-            <div class="acai-cali card">
+        <div id="accordionMenu" class="accordion">
+            <div class="acai-cali card accordion-item">
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -49,8 +49,8 @@
                     </h5>
                 </div>
 
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
+                <div id="collapseOne" class="accodion-collapse collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body accodion-body">
                         <img src="./Acai & Juice Bar/images/cali-creamin-bowl.jpg" height="210"/>
                             <h2>Cali Creamin Bowl</h2>
                             <p class="bowl-ingredients">
@@ -115,6 +115,18 @@
                             </div>
                     </div>
                 </div> 
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Accordion Item #2
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
         </main>
