--- a/about.html
+++ b/about.html
@@ -1,12 +1,3 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Contact Us:</title>
-</head>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,7 +42,7 @@
                 </div>
 
                 <div class="col col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-success btn-outline-success text-white btn-lg text-nowrap" data-toggle="modal" role="button" data-target="#orderModal" >
+                    <a class="btn btn-info btn-outline-success text-white btn-lg text-nowrap" data-toggle="modal" role="button" data-target="#orderModal" >
                         Order Now
                     </a>
                 </div>
