added font awesome icons to nav. adding menu items to menu.html. added 3rd party online ordering buttons.

--- a/about.html
+++ b/about.html
@@ -66,24 +66,24 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./menu.html">
-                            <i class="fa fa-solid fa-fork-knife fa-lg"></i> 
+                            <i class="fa fa-solid fa-spoon fa-lg"></i> 
                             Menu
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">
+                        <a class="nav-link" href="#">
                             <i class="fa fa-info fa-lg"></i> 
                             About Us
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contactus.html">
-                            <i class="fa fa-solid fa-location-dot fa-lg"></i> 
+                            <i class="fa fa-solid fa-map fa-lg"></i> 
                             Contact Us
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar-brand">
+                        <a href="index.html" class="navbar-brand">
                             <img src="./Acai & Juice Bar/images/strawberry.jpg" height="40" width="40" />
                         </a>
                     </li>
