--- a/contactus.html
+++ b/contactus.html
@@ -68,14 +68,14 @@
             <div class="collapse navbar-collapse" id="homeNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" id="Home">
+                        <a class="nav-link" href="./index.html" id="Home">
                             <i class="fa fa-solid fa-home fa-lg"></i> 
                             Home
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./menu.html">
-                            <i class="fa fa-solid fa-fork-knife fa-lg"></i> 
+                            <i class="fa fa-solid fa-spoon fa-lg"></i> 
                             Menu
                         </a>
                     </li>
@@ -86,8 +86,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactus.html">
-                            <i class="fa fa-solid fa-location-dot fa-lg"></i> 
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-solid fa-map fa-lg"></i> 
                             Contact Us
                         </a>
                     </li>
