--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./menu.html">
-                            <i class="fa fa-solid fa-fork-knife fa-lg"></i> 
+                            <i class="fa fa-solid fa-spoon fa-lg"></i> 
                             Menu
                         </a>
                     </li>
@@ -78,7 +78,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contactus.html">
-                            <i class="fa fa-solid fa-location-dot fa-lg"></i> 
+                            <i class="fa fa-solid fa-map fa-lg"></i> 
                             Contact Us
                         </a>
                     </li>
