--- a/contactus.html
+++ b/contactus.html
@@ -39,7 +39,7 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                <div class="col col-md-4 col-xl-2 mt-4">
                     <a href="./index.html">
                         <img class="logo" src="./Acai & Juice Bar/images/logo.jpg" alt="img-fluid" />
                     </a>
@@ -92,14 +92,62 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar-brand">
-                            <img src="./Acai & Juice Bar/images/strawberry.jpg" height="40" width="40" />
+                        <a href="./index.html" class="navbar-brand">
+                            <img src="./Acai & Juice Bar/images/fruit/berries.jpg" height="40" width="40" />
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <form>
+        <h2>Provide Feedback</h2>
+        <div class="form-group row">
+            <label for="firstName" class="col-md-2 col-form-label ml-4">First Name</label>
+            <div class="col-md-6 ml-2">
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="lastName" class="col-md-2 col-form-label ml-4">Last Name</label>
+            <div class="col-md-6 ml-2">
+                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="email" class="col-md-2 col-form-label ml-4">Email</label>
+            <div class="col-md-6 ml-2">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Email" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col offset-md-2 ml-4">
+                May we contact you?
+                <br>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" id="contactYes" name="contactRadios" value="yes" />
+                    <label for="contactYes" class="form-check-label">Yes</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" id="contactNo" name="contactRadios" value="no" />
+                    <label for="contactNo" class="form-check-label">No</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="feedback" class="col-md-2 col-form-label ml-4">Your Feedback:</label>
+            <div class="col-md-6 ml-2">
+                <textarea class="form-control" id="feedback" name="feedback" rows="4">
+                </textarea>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="offset-md-2 col-md-6">
+                <button type="submit">Send Feedback</button>
+            </div>
+        </div>
+    </form>
 
     <footer class="site-footer">
         <div class="container">
