--- a/contactus.html
+++ b/contactus.html
@@ -101,15 +101,20 @@
         </div>
     </nav>
 
+    <!-- Paso Robles Location -->
+    
+
+
+    <!-- Feedback form -->
     <form>
         <h2>Provide Feedback</h2>
-        <div class="form-group row">
+        <div class="form-group form-row">
             <label for="firstName" class="col-md-2 col-form-label ml-4">First Name</label>
             <div class="col-md-6 ml-2">
                 <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" />
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group form-row">
             <label for="lastName" class="col-md-2 col-form-label ml-4">Last Name</label>
             <div class="col-md-6 ml-2">
                 <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" />
@@ -138,13 +143,15 @@
         <div class="form-group row">
             <label for="feedback" class="col-md-2 col-form-label ml-4">Your Feedback:</label>
             <div class="col-md-6 ml-2">
-                <textarea class="form-control" id="feedback" name="feedback" rows="4">
+                <textarea class="form-control form-control-sm" id="feedback" name="feedback" rows="4">
                 </textarea>
             </div>
         </div>
         <div class="form-group row">
             <div class="offset-md-2 col-md-6">
-                <button type="submit">Send Feedback</button>
+                <button type="submit" class="btn btn-success">
+                    Send Feedback
+                </button>
             </div>
         </div>
     </form>
