--- a/contactus.html
+++ b/contactus.html
@@ -102,7 +102,25 @@
     </nav>
 
     <!-- Paso Robles Location -->
-    
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="./Acai & Juice Bar/images/our-location.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Paso Robles Location</h5>
+                <a href="https://www.google.com/maps/dir//811+13th+St,+Paso+Robles,+CA+93446/@35.6142251,-120.6955753,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x80ecc55d4367b445:0x3531d243a5325a33!2m2!1d-120.6897891!2d35.6279326" target="_blank">
+                    <i>
+                        811 13th Street, 
+                        <br>
+                        Paso Robles, CA 93446
+                    </i>
+                </a>
+            <p class="card-text">
+                Hours:  8:00am - 5:00pm
+            </p>
+            <a href="tel:18053692119" class="btn btn-link text-white btn-primary" role="button">
+                Call the Store
+            </a>
+        </div>
+    </div>
 
 
     <!-- Feedback form -->
