added SLO location card in contactus.html

--- a/contactus.html
+++ b/contactus.html
@@ -123,6 +123,28 @@
     </div>
 
 
+    <!-- SLO Location -->
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="./Acai & Juice Bar/images/slo-location.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">San Luis Obispo Location</h5>
+                <a href="https://www.google.com/maps/dir//973+Foothill+Blvd+%23107,+San+Luis+Obispo,+CA+93405/@35.2935749,-120.6711979,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80ecf0525f2fe277:0x31adb76c30e7f0de!2m2!1d-120.6690146!2d35.2935705!3e0" target="_blank">
+                    <i>
+                        973 E Foothill Blvd, Ste 107, 
+                        <br>
+                        San Luis Obispo, CA 93405
+                    </i>
+                </a>
+            <p class="card-text">
+                Hours:  9:00am - 4:00pm
+            </p>
+            <a href="tel:18054394033" class="btn btn-link text-white btn-primary" role="button">
+                Call the Store
+            </a>
+        </div>
+    </div>
+
+
     <!-- Feedback form -->
     <form>
         <h2>Provide Feedback</h2>
@@ -212,7 +234,7 @@
                         </a>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 9:00am - 5:00pm
+                                Hours: 9:00am - 4:00pm
                             </i>
                         </a>
                         <a class="btn btn-link" role="button" href="tel:18054394033">
