added social media buttons

--- a/contactus.html
+++ b/contactus.html
@@ -204,6 +204,28 @@
     </form>
 
 
+    <!-- Social Media -->
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 px-4 py-4">
+                <h2>Check Us Out On Social Media:</h2>
+                <a href="https://www.instagram.com/neighborhood_acai/?hl=en" class="btn btn-social-icon btn-instagram btn-lg" target="_blank">
+                    <i class="fa fa-instagram fa-lg">
+                    </i>
+                </a>
+                <a href="https://www.facebook.com/neighborhoodacai/" class="btn btn-social-icon btn-facebook btn-lg">
+                    <i class="fa fa-facebook fa-lg">
+                    </i>
+                </a>
+                <a href="https://www.yelp.com/biz/the-neighborhood-acai-and-juice-bar-paso-robles-4?osq=neighborhood+acai" class="btn btn-lg btn-social-icon btn-facebook">
+                    <i class="fa fa-yelp fa-lg">
+                    </i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Footer -->
     <footer class="site-footer col-12">
         <div class="container">
@@ -220,7 +242,7 @@
                         </a>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 8:00am - 5:00pm
+                                8:00am - 5:00pm
                             </i>
                         </a>
                         <a class="btn btn-link" role="button" href="tel:18053692119">
@@ -243,7 +265,7 @@
                         </a>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 9:00am - 4:00pm
+                                9:00am - 4:00pm
                             </i>
                         </a>
                         <a class="btn btn-link" role="button" href="tel:18054394033">
