added to home page index.html

--- a/index.html
+++ b/index.html
@@ -105,42 +105,47 @@
         </div>
     </nav>
 
-    <!--Menu Tabs-->
-    <div class="row row-content align-items-center">
-        <div class="col-12">
-            <h2>Menu</h2>
-            <ul class="nav nav-tabs">
-                <li class="nav-item"><a class="nav-link" href="#acai" role="tab" data-toggle="tab">Acai Bowls</a></li>
-                <li class="nav-item"><a class="nav-link" href="#juice" role="tab" data-toggle="tab">Juice Drinks</a></li>
-                <li class="nav-item"><a class="nav-link" href="#cleanse" role="tab" data-toggle="tab">Juice Cleanses</a></li>
-                <li class="nav-item"><a class="nav-link" href="#food" role="tab" data-toggle="tab">Food Items</a></li>
-                <li class="nav-item"><a class="nav-link" href="#smoothie" role="tab" data-toggle="tab">Smoothies</a></li>           
-            </ul>
-            
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade show active" id="acai">
-                    <h4> Text <small> Text </small></h4>
-                    <p class="d-none d-sm-block">Text</p>
+    <!-- Home Page Cards -->
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6">
+                <div class="card my-3 mx-4">
+                    <img class="card px-2 py-2" src="./Acai & Juice Bar/images/food/misc food.jpg" alt="Image of bowls with food and green smoothie in center" >
                 </div>
-                <div role="tabpanel" class="tab-pane fade" id="juice">
-                    <h4>Text <small>Text</small></h4>
-                    <p class="d-none d-sm-block">Text</p>
-                </div>
-                <div role="tabpanel" class="tab-pane fade" id="cleanse">
-                    <h4>Text<small>Text</small></h4>
-                    <p class="d-none d-sm-block">Text</p>
-                </div>
-                <div role="tabpanel" class="tab-pane fade" id="food">
-                    <h4>Text<small>Text</small></h4>
-                    <p class="d-none d-sm-block">Text</p>
-                </div>
-                <div role="tabpanel" class="tab-pane fade" id="smoothie">
-                    <h4>Text<small>Text</small></h4>
-                    <p class="d-none d-sm-block">Text</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-6"> 
+                <div class="card my-3 mx-4">
+                    <img class="card px-2 py-2" src="./Acai & Juice Bar/images/food/lotus-bowl_files/100921187_248954602853286_3101166615383725253_n.jpg" alt="Card image cap">
                 </div>
             </div>
         </div>
+
+        <div class="row text-center">
+            <div class="text-center"> 
+                <p>
+                    The Neighborhood  is a fresh new cafe serving a healthy selection of Acai bowls, Organic Cold Pressed Juices, Smoothies and Plant-Based food for San Luis Obispo (SLO) and Paso Robles.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6"> 
+                <div class="card my-3 mx-4">
+                    <img class="card px-2 py-2" src="./Acai & Juice Bar/images/spooners-cove-bowl.jpg" alt="Card image cap">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6"> 
+                <div class="card my-3 mx-4">
+                    <img class="card px-2 py-2" src="./Acai & Juice Bar/images/food/deconstructed-shot-ginger-lemon.jpg" alt="Card image cap">
+                </div>
+            </div>
+
+        </div>
+
     </div>
+</body>
 
     <footer class="site-footer">
         <div class="container">
