adding accordion menu items for acai bowls and juice

--- a/contactus.html
+++ b/contactus.html
@@ -106,53 +106,55 @@
     </nav>
 
     <!-- Location Cards -->
-    <div class="row">
-        <div class="col-xs-12 col-sm-6">
-        <!-- Paso Robles Location -->
-            <div class="card my-3 mx-4">
-                <img class="card-img-top p1-2" src="./Acai & Juice Bar/images/our-location.jpg" alt="Card image cap" id="pasoCard">
-                <div class="card-body">
-                    <h5 class="card-title">Paso Robles Location</h5>
-                        <a href="https://www.google.com/maps/dir//811+13th+St,+Paso+Robles,+CA+93446/@35.6142251,-120.6955753,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x80ecc55d4367b445:0x3531d243a5325a33!2m2!1d-120.6897891!2d35.6279326" target="_blank">
-                            <i>
-                                811 13th Street, 
-                                <br>
-                                Paso Robles, CA 93446
-                            </i>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6">
+            <!-- Paso Robles Location -->
+                <div class="card my-3 mx-4">
+                    <img class="card-img-top px-2" src="./Acai & Juice Bar/images/our-location.jpg" alt="Card image cap" id="pasoCard">
+                    <div class="card-body">
+                        <h5 class="card-title">Paso Robles Location</h5>
+                            <a href="https://www.google.com/maps/dir//811+13th+St,+Paso+Robles,+CA+93446/@35.6142251,-120.6955753,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x80ecc55d4367b445:0x3531d243a5325a33!2m2!1d-120.6897891!2d35.6279326" target="_blank">
+                                <i>
+                                    811 13th Street, 
+                                    <br>
+                                    Paso Robles, CA 93446
+                                </i>
+                            </a>
+                        <p class="card-text">
+                            Hours:  8:00am - 5:00pm
+                        </p>
+                        <a href="tel:18053692119" class="btn btn-link text-white btn-primary" role="button">
+                            Call the Store
                         </a>
-                    <p class="card-text">
-                        Hours:  8:00am - 5:00pm
-                    </p>
-                    <a href="tel:18053692119" class="btn btn-link text-white btn-primary" role="button">
-                        Call the Store
-                    </a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-xs-12 col-sm-6"> 
-        <!-- SLO Location -->
-            <div class="card my-3 mx-4">
-                <img class="card-img-top px-2 py-2" src="./Acai & Juice Bar/images/slo-location.jpg" alt="Card image cap" id="sloCard">
-                <div class="card-body">
-                    <h5 class="card-title">SLO Location</h5>
-                        <a href="https://www.google.com/maps/dir//973+Foothill+Blvd+%23107,+San+Luis+Obispo,+CA+93405/@35.2935749,-120.6711979,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80ecf0525f2fe277:0x31adb76c30e7f0de!2m2!1d-120.6690146!2d35.2935705!3e0" target="_blank">
-                            <i>
-                                973 E Foothill Blvd, Ste 107, 
-                                <br>
-                                San Luis Obispo, CA 93405
-                            </i>
+            <div class="col-xs-12 col-sm-6"> 
+            <!-- SLO Location -->
+                <div class="card my-3 mx-4">
+                    <img class="card-img-top px-2 py-2" src="./Acai & Juice Bar/images/slo-location.jpg" alt="Card image cap" id="sloCard">
+                    <div class="card-body">
+                        <h5 class="card-title">SLO Location</h5>
+                            <a href="https://www.google.com/maps/dir//973+Foothill+Blvd+%23107,+San+Luis+Obispo,+CA+93405/@35.2935749,-120.6711979,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80ecf0525f2fe277:0x31adb76c30e7f0de!2m2!1d-120.6690146!2d35.2935705!3e0" target="_blank">
+                                <i>
+                                    973 E Foothill Blvd, Ste 107, 
+                                    <br>
+                                    San Luis Obispo, CA 93405
+                                </i>
+                            </a>
+                        <p class="card-text">
+                            Hours:  9:00am - 4:00pm
+                        </p>
+                        <a href="tel:18054394033" class="btn btn-link text-white btn-primary" role="button">
+                            Call the Store
                         </a>
-                    <p class="card-text">
-                        Hours:  9:00am - 4:00pm
-                    </p>
-                    <a href="tel:18054394033" class="btn btn-link text-white btn-primary" role="button">
-                        Call the Store
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
 
 
     <!-- Feedback form -->
