formatting of website

--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
     <!-- Home Page Cards -->
     <div class="container">
         <div class="row">
+            <div class="col">
+                <h1>Welcome</h1>
+            </div>
+        </div>
+        <div class="row"> 
             <div class="col-xs-12 col-sm-6">
                 <div class="card my-3 mx-4">
                     <img class="card px-2 py-2" src="./Acai & Juice Bar/images/food/misc food.jpg" alt="Image of bowls with food and green smoothie in center" >
@@ -147,7 +152,8 @@
     </div>
 </body>
 
-    <footer class="site-footer">
+    <!-- Footer -->
+    <footer class="site-footer col-12">
         <div class="container">
             <div class="row row-content align-items-center">
                 <!-- Paso Robles Location -->
@@ -162,7 +168,7 @@
                         </a>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 8:00am - 5:00pm
+                                8:00am - 5:00pm
                             </i>
                         </a>
                         <a class="btn btn-link" role="button" href="tel:18053692119">
@@ -185,7 +191,7 @@
                         </a>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 9:00am - 5:00pm
+                                9:00am - 4:00pm
                             </i>
                         </a>
                         <a class="btn btn-link" role="button" href="tel:18054394033">
