--- a/menu.html
+++ b/menu.html
@@ -95,7 +95,7 @@
         </div>
     </nav>
     
-    
+
     <!-- Ordering Options: Online + Phone -->
     <div class="container">
         <div class="row">
@@ -459,7 +459,7 @@
                                 </div>
 
                                 <div class="collapse show card  col-6" id="food" data-parent="#accordion">
-                                    <img src="./Acai & Juice Bar/images/food/thai-tempeh-wrap.jpg" class="card-img-top" alt="card image cap">
+                                    <img src="./Acai & Juice Bar/images/food/spicy tempeh.webp" class="card-img-top" alt="card image cap">
                                     <div class="card-body">
                                         <H5 class="d-none d-sm-block card-title">
                                             Spicy Tempeh Wrap
