added photos to backgrounds and fixed formatting in footers

--- a/about.html
+++ b/about.html
@@ -106,11 +106,12 @@
     </nav>
 
     <!-- About Us Information -->
+    <div id="aboutUsSection">
     <div class="main-content container"> 
         <div class="row">
             <div class="col col-sm-10 my-4">
                 <h1>About Us</h1>
-                <p>
+                <p class="aboutUsText">
                 Founders Chris and Doug both graduated from Cal Poly over 10 years ago with an idea that they wanted to stay immersed in the SLO life while providing some sort of value to the community. Years ago on a trip to San Diego they went out for breakfast and both came across The Acai Bowl, something both have never heard of. They were amazed at how this wasn't just a basic smoothie, but a full breakfast meal in a bowl. It was not only delicious, but healthy and provided natural energy to start the day off right.
 
                 <br>
@@ -126,10 +127,11 @@
             </div>
         </div>
     </div>
+    </div>
 
 
-    <!-- Interactive Footer -->
-    <footer class="site-footer">
+    <!-- Footer -->
+    <footer class="site-footer col-12">
         <div class="container">
             <div class="row row-content align-items-center">
                 <!-- Paso Robles Location -->
@@ -140,16 +142,21 @@
                                 811 13th Street, 
                                 <br>
                                 Paso Robles, CA 93446
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 8:00am - 5:00pm
+                                8:00am - 5:00pm
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a class="btn btn-link" role="button" href="tel:18053692119">
                             <i class="fa fa-solid fa-phone fa-md">
                                 (805) 369-2119
+                                <br>
                             </i>
                         </a>
                     <br/>
@@ -163,16 +170,21 @@
                                 973 E Foothill Blvd, Ste 107, 
                                 <br>
                                 San Luis Obispo, CA 93405
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
-                                Hours: 9:00am - 5:00pm
+                                9:00am - 4:00pm
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a class="btn btn-link" role="button" href="tel:18054394033">
                             <i class="fa fa-solid fa-phone fa-md">
                                 (805) 439-4033
+                                <br>
                             </i>
                         </a>
                 </div>
@@ -180,12 +192,17 @@
                 <!-- Social Media -->
                 <div class="col-4 col-sm-4">
                     <h6>Social Media:</h6>
+                    <br>
                     <a href="https://www.instagram.com/neighborhood_acai/?hl=en" class="btn btn-social-icon btn-instagram" target="_blank">
                         <i class="fa fa-instagram">
                         </i>
                     </a>
                     <a href="https://www.facebook.com/neighborhoodacai/" class="btn btn-social-icon btn-facebook">
                         <i class="fa fa-facebook">
+                        </i>
+                    </a>
+                    <a href="https://www.yelp.com/biz/the-neighborhood-acai-and-juice-bar-paso-robles-4?osq=neighborhood+acai" class="btn btn-social-icon btn-facebook">
+                        <i class="fa fa-yelp">
                         </i>
                     </a>
                 </div>
