--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </nav>
 
     <!-- Home Page Cards -->
-    <div class="container">
+    <div class="container home" id="home-page">
         <div class="row">
             <div class="col">
                 <h1>Welcome</h1>
@@ -129,7 +129,10 @@
         <div class="row text-center">
             <div class="text-center"> 
                 <p>
-                    The Neighborhood  is a fresh new cafe serving a healthy selection of Acai bowls, Organic Cold Pressed Juices, Smoothies and Plant-Based food for San Luis Obispo (SLO) and Paso Robles.
+                    The Neighborhood is a fresh new cafe serving a healthy selection of 
+                    Acai bowls, 
+                    Organic Cold Pressed Juices, Smoothies and Plant-Based food 
+                    for San Luis Obispo (SLO) and Paso Robles.
                 </p>
             </div>
         </div>
