--- a/contactus.html
+++ b/contactus.html
@@ -34,7 +34,7 @@
     <title>The Neighborhood: Acai and Juice Bar</title>
     </head>
 
-<body>
+<body >
     <!-- Header/Title-->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -106,6 +106,7 @@
     </nav>
 
     <!-- Location Cards -->
+    <div  id="contactUsCards" >
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-6">
@@ -231,6 +232,7 @@
             </div>
         </div>
     </div>
+    </div>
 
 
     <!-- Footer -->
@@ -245,16 +247,21 @@
                                 811 13th Street, 
                                 <br>
                                 Paso Robles, CA 93446
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
                                 8:00am - 5:00pm
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a class="btn btn-link" role="button" href="tel:18053692119">
                             <i class="fa fa-solid fa-phone fa-md">
                                 (805) 369-2119
+                                <br>
                             </i>
                         </a>
                     <br/>
@@ -268,16 +275,21 @@
                                 973 E Foothill Blvd, Ste 107, 
                                 <br>
                                 San Luis Obispo, CA 93405
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a href="./contactus.html">
                             <i class="fa fa-solid fa-hourglass fa-md">
                                 9:00am - 4:00pm
+                                <br>
                             </i>
                         </a>
+                        <br>
                         <a class="btn btn-link" role="button" href="tel:18054394033">
                             <i class="fa fa-solid fa-phone fa-md">
                                 (805) 439-4033
+                                <br>
                             </i>
                         </a>
                 </div>
@@ -285,12 +297,17 @@
                 <!-- Social Media -->
                 <div class="col-4 col-sm-4">
                     <h6>Social Media:</h6>
+                    <br>
                     <a href="https://www.instagram.com/neighborhood_acai/?hl=en" class="btn btn-social-icon btn-instagram" target="_blank">
                         <i class="fa fa-instagram">
                         </i>
                     </a>
                     <a href="https://www.facebook.com/neighborhoodacai/" class="btn btn-social-icon btn-facebook">
                         <i class="fa fa-facebook">
+                        </i>
+                    </a>
+                    <a href="https://www.yelp.com/biz/the-neighborhood-acai-and-juice-bar-paso-robles-4?osq=neighborhood+acai" class="btn btn-social-icon btn-facebook">
+                        <i class="fa fa-yelp">
                         </i>
                     </a>
                 </div>
