first finalized draft of acai website

--- a/menu.html
+++ b/menu.html
@@ -136,6 +136,7 @@
            <div class="row row-content align-items-center">
                 <div class="col">
                     <h3>Menu Items</h3>
+                    <h5>Click to expand:</h5>
                     <div id="accordion">
 
                         <!-- Acai Bowls -->
